--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 	version="${file.jarVersion}"
 	displayName="Fantasy's Furniture"
 	updateJSONURL="https://raw.githubusercontent.com/ApexStudios-Dev/Version/master/fantasyfurniture.json"
-	displayURL="https://www.curseforge.com/minecraft/mc-mods/fantasys-furniture"
+	displayURL="https://www.apexstudios.dev/fantasys-furniture"
 	logoFile="banner.png"
 	credits="Apex - Programming, FantasyGaming - Texture Artist"
 	authors="Apex, FantasyGaming"
@@ -17,7 +17,7 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 [[dependencies.fantasyfurniture]]
 	modId="forge"
 	mandatory=true
-	versionRange="[41.0.98,)"
+	versionRange="[41.1.0,)"
 	ordering="AFTER"
 	side="BOTH"
 [[dependencies.fantasyfurniture]]
@@ -29,13 +29,13 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 [[dependencies.fantasyfurniture]]
 	modId="commonality"
 	mandatory=true
-	versionRange="[2.2.1,3.0.0)"
+	versionRange="[2.3.0,3.0.0)"
 	ordering="AFTER"
 	side="BOTH"
 [[dependencies.fantasyfurniture]]
 	modId="apexcore"
 	mandatory=true
-	versionRange="[5.2.2,6.0.0)"
+	versionRange="[5.4.0,6.0.0)"
 	ordering="AFTER"
 	side="BOTH"
 [[dependencies.fantasyfurniture]]
