--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[41,)"
+loaderVersion="[42,)"
 license="GNU General Public License v3.0"
 issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 
@@ -17,7 +17,7 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 [[dependencies.fantasyfurniture]]
 	modId="forge"
 	mandatory=true
-	versionRange="[41.1.0,)"
+	versionRange="[42.0.0,)"
 	ordering="AFTER"
 	side="BOTH"
 	[dependencies.fantasyfurniture.custom.mc-publish]
@@ -25,7 +25,7 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 [[dependencies.fantasyfurniture]]
 	modId="minecraft"
 	mandatory=true
-	versionRange="[1.19,1.20)"
+	versionRange="[1.19.1,1.20)"
 	ordering="AFTER"
 	side="BOTH"
 	[dependencies.fantasyfurniture.custom.mc-publish]
@@ -33,13 +33,15 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 [[dependencies.fantasyfurniture]]
 	modId="commonality"
 	mandatory=true
-	versionRange="[2.3.0,3.0.0)"
+	versionRange="[3.0.0,4.0.0)"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.fantasyfurniture.custom.mc-publish]
+		ignore=true
 [[dependencies.fantasyfurniture]]
 	modId="apexcore"
 	mandatory=true
-	versionRange="[5.4.0,6.0.0)"
+	versionRange="[6.0.0,7.0.0)"
 	ordering="AFTER"
 	side="BOTH"
 	[dependencies.fantasyfurniture.custom.mc-publish]
@@ -48,7 +50,7 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 [[dependencies.fantasyfurniture]]
 	modId="jei"
 	mandatory=false
-	versionRange="[11.0.0.211,)"
+	versionRange="[11.2.0.241,)"
 	ordering="AFTER"
 	side="BOTH"
 	[dependencies.fantasyfurniture.custom.mc-publish]
