--- a/gradle.properties
+++ b/gradle.properties
@@ -21,5 +21,5 @@ apexcore_mod_id=apexcore
 apexcore_version=6.0.1
 apexcore_version_range=[6.0.1,7.0.0)
 
-jei_version=11.2.0.241
+# jei_version=11.2.0.241
 # ctm_version=1.1.4+4
