--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@ mod_id=fantasyfurniture
 mod_name=Fantasy's Furniture
 mod_version=6.1.0
 mod_base_package=xyz.apex.forge
-mod_authors=Apex, FantasyGaming
 mod_release_type=release
 mod_curseforge_id=579564
 mod_modrinth_id=A0nfCqYw
-mod_git_url=https://github.com/ApexStudios-Dev/FantasyFurniture
 
 minecraft_version=1.19.2
 forge_version=43.0.0
+parchment_mappings=2022.08.10
+java_version=17
 
 registrate_version=1.1.5
 registrate_package=com.tterrag.registrate
