Update build script to match 1.19.x changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,25 @@
 mod_id=fantasyfurniture
 mod_name=Fantasy's Furniture
-mod_version=3.6.1
+mod_version=6.1.2
 mod_base_package=xyz.apex.forge
-mod_authors=Apex, FantasyGaming
 mod_release_type=release
 mod_curseforge_id=579564
 mod_modrinth_id=A0nfCqYw
-mod_git_url=https://github.com/ApexStudios-Dev/FantasyFurniture
 
 minecraft_version=1.18.2
 forge_version=40.1.52
+parchment_mappings=2022.08.07
+java_version=17
 
-registrate_version=1.2.6+2c6a0ad
+registrate_version=1.1.3
 registrate_package=com.tterrag.registrate
 
 commonality_mod_id=commonality
 commonality_version=1.2.1
 
 apexcore_mod_id=apexcore
-apexcore_version=4.9.0
+apexcore_version=4.10.0
+apexcore_version_range=[4.10.0,5.0.0)
 
-jei_version=9.7.0.195
+jei_version=10.1.3.240
 ctm_version=1.1.4+4
