--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,65 @@
-buildscript {
-	repositories {
-		maven { url 'https://maven.minecraftforge.net' }
-		maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
-		mavenCentral()
-	}
-	dependencies {
-		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-		classpath 'org.spongepowered:mixingradle:0.7.+'
-	}
-}
-
 plugins {
-	id 'com.github.johnrengelman.shadow' version '7.1.2'
-	id 'com.matthewprenger.cursegradle' version '1.4.0'
-	id 'com.modrinth.minotaur' version '2.+'
+	id 'java'
+	id 'idea'
+	id 'maven-publish'
+
+	id 'net.minecraftforge.gradle' version '5.1.+'
+	id 'org.spongepowered.mixin' version '0.7.+'
+	id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+	id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1'
 }
 
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.spongepowered.mixin'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'maven-publish'
-
-version = "${minecraft_version}-${mod_version}"
+version = "${mod_version}"
 group = "${mod_base_package}"
-archivesBaseName = "${mod_id}"
+archivesBaseName = "${mod_id}-${minecraft_version}"
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+jarJar.enable()
 
 configurations {
-	shade
+	library
+	implementation.extendsFrom library
+}
+
+sourceSets {
+	main {
+		java {
+			srcDirs = [ 'src/main/java' ]
+		}
+
+		resources {
+			srcDirs = [ 'src/main/resources', 'src/generated/resources' ]
+		}
+	}
+
+	test {
+		java {
+			srcDirs = [ 'src/test/java' ]
+		}
+
+		resources {
+			srcDirs = [ 'src/test/resources' ]
+		}
+	}
 }
 
 minecraft {
-	mappings channel: 'official', version: "${minecraft_version}"
+	mappings channel: 'parchment', version: "${parchment_mappings}-${minecraft_version}"
 	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
 	runs {
 		client {
 			taskName 'Client'
 			workingDirectory file('run/client')
-			// property 'forge.logging.markers', 'REGISTRIES'
-			// property 'forge.logging.console.level', 'debug'
+			property 'forge.logging.markers', ''
+			property 'forge.logging.console.level', 'debug'
 			property 'fml.earlyprogresswindow', 'false'
 			property 'forge.enableGameTest', 'true'
 			property 'forge.enabledGameTestNamespaces', "${mod_id}"
+			args '--width', 1920, '--height', 1080
 
 			mods {
 				"${mod_id}" {
 					source sourceSets.main
-					source sourceSets.test
 				}
 			}
 		}
@@ -65,8 +75,8 @@ minecraft {
 		server {
 			taskName 'Server'
 			workingDirectory file('run/server')
-			// property 'forge.logging.markers', 'REGISTRIES'
-			// property 'forge.logging.console.level', 'debug'
+			property 'forge.logging.markers', ''
+			property 'forge.logging.console.level', 'debug'
 			property 'fml.earlyprogresswindow', 'false'
 			property 'forge.enableGameTest', 'true'
 			property 'forge.enabledGameTestNamespaces', "${mod_id}"
@@ -75,7 +85,6 @@ minecraft {
 			mods {
 				"${mod_id}" {
 					source sourceSets.main
-					source sourceSets.test
 				}
 			}
 		}
@@ -83,8 +92,8 @@ minecraft {
 		gameTestServer {
 			taskName 'GameTest-Server'
 			workingDirectory file('run/gametest-server')
-			// property 'forge.logging.markers', 'REGISTRIES'
-			// property 'forge.logging.console.level', 'debug'
+			property 'forge.logging.markers', ''
+			property 'forge.logging.console.level', 'debug'
 			property 'fml.earlyprogresswindow', 'false'
 			property 'forge.enableGameTest', 'true'
 			property 'forge.enabledGameTestNamespaces', "${mod_id}"
@@ -102,10 +111,10 @@ minecraft {
 		data {
 			taskName 'Data'
 			workingDirectory file('run/client')
-			// property 'forge.logging.markers', 'REGISTRIES'
-			// property 'forge.logging.console.level', 'debug'
+			property 'forge.logging.markers', ''
+			property 'forge.logging.console.level', 'debug'
 			property 'fml.earlyprogresswindow', 'false'
-			args '--mod', mod_id, '--client', '--server', '--validate', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/'), '--existing-mod', apexcore_mod_id
+			args '--mod', mod_id, '--client', '--server', '--validate', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/'), '--existing-mod', apexcore_mod_id, '--existing-mod', commonality_mod_id
 			// ForgeGradle will just force-exit the Gradle Daemon which fails our builds in case
 			// a daemon is used for any reason.
 			forceExit false
@@ -119,15 +128,17 @@ minecraft {
 	}
 }
 
+minecraft.runs.all {
+	lazyToken('minecraft_classpath') {
+		configurations.library.copyRecursive().resolve().collect { it.absolutePath }.join(File.pathSeparator)
+	}
+}
+
 if(file("./src/main/resources/${mod_id}.mixins.json").exists()) {
 	mixin {
 		add sourceSets.main, "${mod_id}.refmap.json"
 		config "${mod_id}.mixins.json"
 	}
-}
-
-sourceSets.main.resources {
-	srcDir 'src/generated/resources'
 }
 
 repositories {
@@ -144,54 +155,42 @@ repositories {
 			includeGroup "curse.maven"
 		}
 	}
+
+	maven {
+		url 'https://api.modrinth.com/maven'
+		content {
+			includeGroup 'maven.modrinth'
+		}
+	}
 }
 
 dependencies {
 	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}:api")
-	runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
+	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
+	compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
+	runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
 
 	compileOnly fg.deobf("team.chisel.ctm:CTM:${minecraft_version}-${ctm_version}:api")
 	runtimeOnly fg.deobf("team.chisel.ctm:CTM:${minecraft_version}-${ctm_version}")
 
-	implementation fg.deobf("${registrate_package}:registrate-apex:MC${minecraft_version}-${registrate_version}")
-	implementation fg.deobf("${mod_base_package}:${commonality_mod_id}:${minecraft_version}-${commonality_version}")
-	implementation fg.deobf("${mod_base_package}:${apexcore_mod_id}:${minecraft_version}-${apexcore_version}:slim")
+	implementation fg.deobf("${registrate_package}:Registrate:MC${minecraft_version}-${registrate_version}")
+
+	implementation fg.deobf("${mod_base_package}:${commonality_mod_id}-${minecraft_version}:${commonality_version}")
+	implementation fg.deobf("${mod_base_package}:${apexcore_mod_id}-${minecraft_version}:${apexcore_version}:slim")
+	jarJar(group: "${mod_base_package}", name: "${apexcore_mod_id}-${minecraft_version}", version: "${apexcore_version_range}")
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier 'sources'
-	from sourceSets.main.allJava
-	from sourceSets.main.resources
-}
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+	options.release.set(JavaLanguageVersion.of("${java_version}").asInt())
 
-task deobfJar(type: Jar) {
-	classifier 'deobf'
-	exclude '**/*bbmodel'
-	from sourceSets.main.output
-}
-
-jar {
-	classifier 'slim'
-	exclude '**/*bbmodel'
-	from sourceSets.main.output.classesDirs
-	from sourceSets.main.output.resourcesDir
-}
-
-shadowJar {
-	classifier ''
-	configurations = [ project.configurations.shade ]
-	relocate "${registrate_package}", "xyz.apex.repack.${registrate_package}"
-	exclude '**/*bbmodel'
-}
-
-artifacts {
-	archives jar
-	archives sourcesJar
-	archives deobfJar
-	archives shadowJar
+	javaToolchains {
+		compilerFor {
+			languageVersion.set(JavaLanguageVersion.of("${java_version}"))
+		}
+	}
 }
 
 tasks.withType(Jar) {
@@ -200,12 +199,12 @@ tasks.withType(Jar) {
 
 	manifest {
 		attributes([
-				'Specification-Title': "${mod_name}",
-				'Specification-Vendor': "${mod_authors}",
-				'Specification-Version': "${mod_version}",
+				'Specification-Title': "${project.name}",
+				'Specification-Vendor': 'ApexStudios',
+				'Specification-Version': "${project.version}",
 				'Implementation-Title': "${mod_name}",
 				'Implementation-Version': "${project.version}",
-				'Implementation-Vendor' : "${mod_authors}",
+				'Implementation-Vendor' : 'ApexStudios',
 				'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
 		])
 	}
@@ -217,28 +216,52 @@ tasks.withType(Jar) {
 	}
 }
 
+java {
+	toolchain {
+		languageVersion.set(JavaLanguageVersion.of("${java_version}"))
+	}
+
+	withSourcesJar()
+}
+
+tasks.jarJar.configure {
+	classifier ''
+}
+
+jar {
+	classifier 'slim'
+	from sourceSets.main.output
+}
+
+artifacts {
+	archives jar
+	archives sourcesJar
+	archives tasks.jarJar
+}
+
 reobf {
-	shadowJar { }
+	jarJar { }
 }
 
 jar.finalizedBy('reobfJar')
-shadowJar.finalizedBy('reobfShadowJar')
+tasks.jarJar.finalizedBy('reobfJarJar')
 
-if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS_MAVEN_PASSWORD') != null) {
-	publishing {
-		publications {
-			mavenJava(MavenPublication) {
-				groupId = "${mod_base_package}"
-				artifactId = "${mod_id}"
-				version = "${minecraft_version}-${mod_version}"
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			groupId = "${project.group}"
+			artifactId = "${mod_id}-${minecraft_version}"
+			version = "${project.version}"
 
-				artifact jar
-				artifact sourcesJar
-				artifact deobfJar
-				artifact shadowJar
-			}
+			artifact jar
+			artifact sourcesJar
+			artifact tasks.jarJar
 		}
-		repositories {
+	}
+	repositories {
+		mavenLocal()
+
+		if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS_MAVEN_PASSWORD') != null) {
 			maven {
 				name 'ApexMods-Maven'
 				url 'https://apexmodder.jfrog.io/artifactory/mods-maven/'
@@ -250,68 +273,8 @@ if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS
 			}
 		}
 	}
-} else {
-	publishing {
-		publications {
-			mavenJava(MavenPublication) {
-				groupId = "${mod_base_package}"
-				artifactId = "${mod_id}"
-				version = "${minecraft_version}-${mod_version}"
-				artifact jar
-				artifact sourcesJar
-				artifact deobfJar
-				artifact shadowJar
-			}
-		}
-		repositories {
-			mavenLocal()
-		}
-	}
 }
 
-if(System.getenv('CURSEFORGE_TOKEN') != null) {
-	curseforge {
-		apiKey = System.getenv('CURSEFORGE_TOKEN')
-
-		project {
-			id = "${mod_curseforge_id}"
-			releaseType = "${mod_release_type}"
-			addGameVersion "${minecraft_version}"
-			changelogType = 'markdown'
-			changelog = file('.github/CHANGELOG.md').text
-
-			relations {
-				requiredDependency "${apexcore_mod_id}"
-			}
-
-			mainArtifact shadowJar
-			addArtifact jar
-			addArtifact sourcesJar
-			addArtifact deobfJar
-		}
-
-		options {
-			detectNewerJava = true
-		}
-	}
-}
-
-import com.modrinth.minotaur.dependencies.ModDependency
-
-if(System.getenv('MODRINTH_TOKEN') != null) {
-	modrinth {
-		token = System.getenv('MODRINTH_TOKEN')
-		projectId = "${mod_modrinth_id}"
-		versionNumber = "${mod_version}"
-		versionName = "${mod_name}-${minecraft_version}-${mod_version}"
-		versionType = "${mod_release_type}"
-		uploadFile = shadowJar
-		additionalFiles = [ jar, sourcesJar, deobfJar ]
-		gameVersions = [ "${minecraft_version}" ]
-		changelog = file('.github/CHANGELOG.md').text
-		loaders = [ 'forge' ]
-		dependencies = [
-				new ModDependency('xl3myxch', 'required') // ApexCore
-		]
-	}
+idea.module {
+	excludeDirs << file('run')
 }
