--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,11 +8,11 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 	version="${file.jarVersion}"
 	displayName="Fantasy's Furniture"
 	updateJSONURL="https://raw.githubusercontent.com/ApexStudios-Dev/Version/master/fantasyfurniture.json"
-	displayURL="https://www.curseforge.com/minecraft/mc-mods/fantasys-furniture"
+	displayURL="https://www.apexstudios.dev/fantasys-furniture"
 	logoFile="banner.png"
-	credits="Apex - Programming, FantasyGaming - Texture Artist"
-	authors="Apex, FantasyGaming"
-	description="Mod requested by Fantasy which adds varying sets of furniture to your Minecraft world."
+	credits="Apex - Programming, FantasyGaming - Artist"
+	authors="ApexStudios"
+	description="Adds Fantasy-Themed Furniture & Decorational blocks to the game"
 
 [[dependencies.fantasyfurniture]]
 	modId="forge"
@@ -20,27 +20,46 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 	versionRange="[40.1.60,41)"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.fantasyfurniture.custom.mc-publish]
+		ignore=true
 [[dependencies.fantasyfurniture]]
 	modId="minecraft"
 	mandatory=true
 	versionRange="[1.18.2,1.19)"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.fantasyfurniture.custom.mc-publish]
+		ignore=true
 [[dependencies.fantasyfurniture]]
 	modId="apexcore"
-	mandatory=true
-	versionRange="[1.18.2,)"
+	mandatory=false
+	versionRange="[4.10.0,5.0.0)"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.fantasyfurniture.custom.mc-publish]
+		modrinth="apexcore"
+		curseforge="apexcore"
+[[dependencies.fantasyfurniture]]
+	modId="commonality"
+	mandatory=true
+	versionRange="[1.2.1,2.0.0)"
+	ordering="AFTER"
+	side="BOTH"
+	[dependencies.fantasyfurniture.custom.mc-publish]
+		ignore=true
 [[dependencies.fantasyfurniture]]
 	modId="jei"
 	mandatory=false
 	versionRange="[10.1.3.+,)"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.fantasyfurniture.custom.mc-publish]
+		curseforge="jei"
 [[dependencies.fantasyfurniture]]
 	modId="ctm"
 	mandatory=false
 	versionRange="*" # ctm versions are funky, just allow all versions
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.fantasyfurniture.custom.mc-publish]
+		curseforge="ctm"
