--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ issueTrackerURL="https://github.com/ApexStudios-Dev/FantasyFurniture/issues"
 	modId="fantasyfurniture"
 	version="${file.jarVersion}"
 	displayName="Fantasy's Furniture"
-	updateJSONURL="https://raw.githubusercontent.com/ApexStudios-Dev/Version/master/fantasyfurniture.json"
+	updateJSONURL="https://api.modrinth.com/updates/fantasy-furniture/forge_updates.json"
 	displayURL="https://www.apexstudios.dev/fantasys-furniture"
 	logoFile="banner.png"
 	credits="Apex - Programming, FantasyGaming - Artist"
