Add Christmas decorational blocks

--- a/src/main/resources/mod_support/optifine/assets/fantasyfurniture/optifine/dynamic_lights.properties
+++ b/src/main/resources/mod_support/optifine/assets/fantasyfurniture/optifine/dynamic_lights.properties
@@ -10,4 +10,6 @@ items=\
   decorations/venthyr_candles:15\
   decorations/bone_candles:15\
   decorations/royal_candelabra:15\
-  decorations/necrolord_candelabra:15
+  decorations/necrolord_candelabra:15\
+  decorations/fairy_lights_1:8\
+  decorations/fairy_lights_2:8
