--- a/.github/workflows/run_release.yml
+++ b/.github/workflows/run_release.yml
@@ -9,19 +9,19 @@ permissions:
   contents: write
 
 jobs:
-    # Gather variables used throughout the workflow
+  # Gather variables used throughout the workflow
   vars:
     name: Gather workflow variables
     runs-on: ubuntu-latest
 
     outputs:
-      mod_name: ${{ steps.mod_name.outputs.value }}
-      mod_version: ${{ steps.mod_version.outputs.value }}
-      mod_curseforge_id: ${{ steps.mod_curseforge_id.outputs.value }}
-      mod_modrinth_id: ${{ steps.mod_modrinth_id.outputs.value }}
-      mod_release_type: ${{ steps.mod_release_type.outputs.value }}
-      minecraft_version: ${{ steps.minecraft_version.outputs.value }}
-      forge_version: ${{ steps.forge_version.outputs.value }}
+      mod_name: ${{ steps.gradle.outputs.mod_name }}
+      mod_version: ${{ steps.gradle.outputs.mod_version }}
+      mod_curseforge_id: ${{ steps.gradle.outputs.mod_curseforge_id }}
+      mod_modrinth_id: ${{ steps.gradle.outputs.mod_modrinth_id }}
+      mod_release_type: ${{ steps.gradle.outputs.mod_release_type }}
+      minecraft_version: ${{ steps.gradle.outputs.minecraft_version }}
+      forge_version: ${{ steps.gradle.outputs.forge_version }}
       tag_current: ${{ steps.tag_current.outputs.tag }}
       tag_previous: ${{ steps.tag_previous.outputs.tag }}
 
@@ -89,7 +89,7 @@ jobs:
   publish:
     name: Publish Project
     uses: ApexStudios-Dev/.github/.github/workflows/call_publish.yml@master
-    needs: [ compile, changelog ]
+    needs: [ vars, compile, changelog ]
     secrets:
       MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
       CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
